--- a/Calendar/Calendar.WindowsPhone/SettingsPage.xaml
+++ b/Calendar/Calendar.WindowsPhone/SettingsPage.xaml
@@ -328,24 +328,35 @@
         Background="#FFF3F3F3"
         ScrollViewer.VerticalScrollBarVisibility="Visible" 
         VerticalScrollMode="Enabled">
-        <StackPanel RequestedTheme="Light" 
+        <StackPanel VerticalAlignment="Stretch"
+                    Margin="0, 10"
+                HorizontalAlignment="Stretch">
+            <TextBlock x:Uid="settingsTopWP"
+                       Width="auto"
+                       HorizontalAlignment="Center"
+                       TextAlignment="Center"
+                       FontSize="26"
+                       Margin="10"
+                       />
+            <StackPanel RequestedTheme="Light" 
                     Margin="5,10,5,0">
-            <StackPanel Margin="5"
+                
+                <StackPanel Margin="5"
                             HorizontalAlignment="Stretch" 
                             VerticalAlignment="Stretch">
-                <!-- Заголовок раздела 4 -->
-                <TextBlock x:Uid="buyMeTitle" 
+                    <!-- Заголовок раздела 4 -->
+                    <TextBlock x:Uid="buyMeTitle" 
                            FontSize="22"
                            TextWrapping="Wrap"
                            Height="auto"
                            HorizontalAlignment="Stretch"
                            />
-                <TextBlock x:Uid="buyMeText" 
+                    <TextBlock x:Uid="buyMeText" 
                            FontSize="20"
                            Margin="2,10" />
-                <!-- Основная часть раздела 4 -->
+                    <!-- Основная часть раздела 4 -->
 
-                <Button x:Uid="shopBtn" x:Name="buy" 
+                    <Button x:Uid="shopBtn" x:Name="buy" 
                     Margin="5,10" 
                     FontSize="18"
                     Width="100" Height="40" 
@@ -355,10 +366,10 @@
                     BorderBrush="#ff303030"
                     Background="Transparent" 
                     Click="Button_Click"/>
-            </StackPanel>
-            <StackPanel VerticalAlignment="Stretch" 
-                HorizontalAlignment="Stretch">
-                <Grid HorizontalAlignment="Stretch" 
+                </StackPanel>
+
+                <Grid Name="TileGrid"
+                        HorizontalAlignment="Stretch" 
                         VerticalAlignment="Stretch"
                         Margin="0, 5">
 
@@ -368,7 +379,7 @@
                            BorderThickness="0"
                            Height="auto" MinWidth="150"
                            TextAlignment="Left"
-                           FontSize="20"
+                           FontSize="22"
                            Margin="5"
                            IsReadOnly="True"
                            ManipulationMode="None"
@@ -391,15 +402,30 @@
                               HorizontalAlignment="Right"/>
 
                 </Grid>
-                <TextBox x:Uid="toastHeader" 
+                <Grid Name="ToastGrid"
+                          Margin="0,10">
+                        <TextBox x:Uid="toastHeader" 
                      Background="Transparent"
                      Foreground="#ff303030"
                          TextAlignment="Left"
-                         FontSize="20" Margin="5,10,5,15"
+                         FontSize="22" Margin="5,10,5,0"
                          BorderThickness="0"
                          IsReadOnly="True" />
 
-                <Grid Margin="5">
+                        <ToggleSwitch x:Name="toastToggle"
+            	Style="{StaticResource SettingsToggle}" 
+                              FontSize="12" 
+                              Height="auto"
+                              MinWidth="180"
+                              Margin="5,0"
+                              BorderBrush="#ff303030"
+                              Background="Transparent" 
+                              VerticalAlignment="Center"
+                              HorizontalAlignment="Right"
+                          Toggled="toastToggle_Toggled" 
+                          RequestedTheme="Light"/>
+                    </Grid>
+                <Grid Margin="5, 0, 5, 10" Name="ToastCombosGrid">
                     <ComboBox x:Name="comboToast" 
                           Height="auto" Width="150"
                           Margin="5, 0"                          
@@ -413,7 +439,7 @@
                         <ComboBox.Header>
                             <TextBlock x:Uid="daysText" 
                            TextWrapping="Wrap" 
-                           FontSize="18" 
+                           FontSize="20" 
                            Foreground="#ff303030"
                            VerticalAlignment="Bottom"
                            Height="40" MinWidth="120" 
@@ -427,10 +453,9 @@
                         <ComboBoxItem x:Uid="c4" Width="auto" HorizontalAlignment="Stretch"/>
                         <ComboBoxItem x:Uid="c5" Width="auto" HorizontalAlignment="Stretch"/>
                     </ComboBox>
-
                     <ComboBox x:Name="comboPeriod" 
                           Height="auto" Width="150" 
-                          FontSize="18"
+                          FontSize="20"
                           Margin="5, 0"
                           IsHoldingEnabled="False" 
                           HorizontalAlignment="Right" 
@@ -442,7 +467,7 @@
                         <ComboBox.Header>
                             <TextBlock x:Uid="periodText" 
                            TextWrapping="Wrap" 
-                           FontSize="18" 
+                           FontSize="20" 
                            Foreground="#ff303030"
                            VerticalAlignment="Bottom"                           
                            Height="40" MinWidth="120" 
@@ -456,21 +481,12 @@
                         <ComboBoxItem Content="12" Width="auto" HorizontalAlignment="Stretch"/>
                     </ComboBox>
                 </Grid>
-
-                <ToggleSwitch x:Name="toastToggle"
-            	Style="{StaticResource SettingsToggle}" 
-                          Toggled="toastToggle_Toggled" 
-                          RequestedTheme="Light"
-                          BorderBrush="#ff303030"
-                          Background="Transparent"
-                          Width="190" Margin="15,5"
-                          HorizontalAlignment="Center"/>
-
-                <StackPanel  HorizontalAlignment="Stretch" 
+                <!--<StackPanel  Name="GoogleStackPanel"
+                             HorizontalAlignment="Stretch" 
                              VerticalAlignment="Stretch"
                              Margin="5, 10, 5, 0"
                              Orientation="Vertical">
-                    <!-- Заголовок раздела 3 -->
+                    --><!-- Заголовок раздела 3 --><!--
                     <TextBlock Text="google calendar"
                            FontSize="22"
                            TextWrapping="Wrap"
@@ -479,19 +495,13 @@
                            FontFamily="Minion Pro" 
                            Margin="0, 0, 0, 10" 
                            />
-                    <!-- Основная часть раздела 3 -->
+                    --><!-- Основная часть раздела 3 --><!--
                     <TextBlock x:Uid="googleText" 
+                               
+                           TextWrapping="WrapWholeWords" 
                            FontSize="20"
                            Margin="2,10" />
-                    <!--toggle-->
-                    <TextBlock x:Uid="googlePeriod" 
-                           TextWrapping="Wrap" 
-                           FontSize="22" 
-                           VerticalAlignment="Top" 
-                           Height="30" Width="150" 
-                           Margin="0,0,0,0"
-                           FontFamily="Minion Pro"
-                           HorizontalAlignment="Left"/>
+                    --><!--toggle--><!--
                     <Grid>
                         <ComboBox x:Name="comboGooglePeriod" Height="auto" Width="150"
                           Margin="5, 0"                          
@@ -501,6 +511,17 @@
                           HorizontalAlignment="Left" 
                           BorderBrush="#ff303030"
                           Background="Transparent" FontSize="18">
+                            <ComboBox.Header>
+                                <TextBlock x:Uid="googlePeriod" 
+                                           TextWrapping="WrapWholeWords" 
+                                           FontSize="20" 
+                                           Foreground="#ff303030"
+                                           VerticalAlignment="Top" 
+                                           Height="30" Width="150" 
+                                           Margin="0,5"
+                                           FontFamily="Minion Pro"
+                                           HorizontalAlignment="Left"/>
+                            </ComboBox.Header>
                             <ComboBoxItem Content="7" Width="110" IsSelected="True" />
                             <ComboBoxItem Content="30" Width="110"/>
                         </ComboBox>
@@ -516,7 +537,7 @@
                               HorizontalAlignment="Right"
                           Toggled="googleToggle_Toggled"/>
                     </Grid>
-                </StackPanel>
+                </StackPanel>-->
 
                 
             </StackPanel>
