--- a/Calendar/Calendar.WindowsPhone/SettingsPage.xaml
+++ b/Calendar/Calendar.WindowsPhone/SettingsPage.xaml
@@ -402,11 +402,71 @@
                               HorizontalAlignment="Right"/>
 
                 </Grid>
+                
+                <StackPanel Name="smartTileStack"
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                    Margin="0,20"
+                    Orientation="Vertical">
+                    <!-- Заголовок раздела 3 -->
+                    <TextBlock x:Uid="smartTileHeaderText" 
+                           Style="{StaticResource TitleTextBlockStyle}" 
+                           FontSize="26" 
+                           FontFamily="Minion Pro" 
+                           Margin="0, 0, 0, 10" 
+                           Height="auto" Width="300"
+                           HorizontalAlignment="Left"
+                           />
+                    <!-- Основная часть раздела 3 -->
+                    <TextBlock x:Uid="smartTileText" 
+                           Margin="0,10,0,30" 
+                           TextWrapping="Wrap" 
+                           LineHeight="25"
+                           FontSize="22" 
+                           HorizontalAlignment="Left"
+                           MaxWidth="500"
+                           FontFamily="Minion Pro"/>
+                    <!--toggle-->
+                    <TextBlock x:Uid="daysAmountText" 
+                           TextWrapping="Wrap" 
+                           FontSize="22" 
+                           VerticalAlignment="Top" 
+                           Height="30" Width="150" 
+                           Margin="10,0"
+                           FontFamily="Minion Pro"
+                           HorizontalAlignment="Left"/>
+                    <Grid>
+                        <ComboBox x:Name="comboAmount" 
+                                  Height="30" Width="150" 
+                                  Margin="10,0" 
+                                  IsHoldingEnabled="False" 
+                                  ManipulationMode="None" 
+                                  VerticalAlignment="Stretch" 
+                                  HorizontalAlignment="Left">
+                            <ComboBoxItem Content="2" Width="auto" HorizontalAlignment="Stretch" IsSelected="True" />
+                            <ComboBoxItem Content="3" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem Content="4" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem Content="5" Width="auto" HorizontalAlignment="Stretch"/>
+                        </ComboBox>
+                        <ToggleSwitch x:Name="smartTileToggle"
+                          Style="{StaticResource SettingsToggle}" 
+                              FontSize="12" 
+                              Height="auto"
+                              MinWidth="180"
+                              Margin="5,0"
+                              BorderBrush="#ff303030"
+                              Background="Transparent" 
+                              VerticalAlignment="Center"
+                              HorizontalAlignment="Right"
+                          Toggled="smartTileToggle_Toggled" 
+                          RequestedTheme="Light"/>
+                    </Grid>
+                </StackPanel>
+                
                 <Grid Name="ToastGrid"
                           Margin="0,10">
                         <TextBox x:Uid="toastHeader" 
-                     Background="Transparent"
-                     Foreground="#ff303030"
+                        Background="Transparent"
+                        Foreground="#ff303030"
                          TextAlignment="Left"
                          FontSize="22" Margin="5,10,5,0"
                          BorderThickness="0"
