Tiles and tasks 1. SmartTile task is finished (Windows) 2. SettingsPanel for Windows app is finished 3. SettingsPage for WP app is underway

--- a/Calendar/Calendar.Shared/App.xaml
+++ b/Calendar/Calendar.Shared/App.xaml
@@ -25,6 +25,10 @@
                     <SolidColorBrush x:Key="ButtonPointerOverForegroundThemeBrush" Color="White" />
                     <SolidColorBrush x:Key="ButtonPressedBackgroundThemeBrush" Color="Transparent" />
                     <SolidColorBrush x:Key="ButtonPressedForegroundThemeBrush" Color="Transparent" />
+
+                    <SolidColorBrush x:Key="ToggleSwitchCurtainBackgroundThemeBrush" Color="LightGray" />
+                    <SolidColorBrush x:Key="ToggleSwitchCurtainPointerOverBackgroundThemeBrush" Color="DarkGray" />
+                    <SolidColorBrush x:Key="ToggleSwitchCurtainPressedBackgroundThemeBrush" Color="#303030" />
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
