--- a/Calendar/Calendar.Windows/BaseSettingsFlyout.xaml
+++ b/Calendar/Calendar.Windows/BaseSettingsFlyout.xaml
@@ -8,7 +8,23 @@
     mc:Ignorable="d"
     IconSource="Assets/SmallLogo.png"
     Loaded="SettingsFlyout_Loaded"
-    d:DesignWidth="500">
+    HeaderForeground="White"
+    Background="#303030"
+    HeaderBackground="Transparent"
+    HorizontalAlignment="Center"
+    RequestedTheme="Dark"
+    d:DesignWidth="500">    
+    
+    <SettingsFlyout.Resources>
+        <ResourceDictionary>
+            <Style TargetType="ToggleSwitch" >
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="Foreground" Value="LightGray"/>
+                <Setter Property="HorizontalAlignment" Value="Right"/>
+                <Setter Property="Margin" Value="10, -15, 10, 0"/>  
+            </Style>
+        </ResourceDictionary>
+    </SettingsFlyout.Resources>
     
     <!-- This StackPanel acts as a root panel for vertical layout of the content sections -->
     <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" >
@@ -16,51 +32,99 @@
                             Margin="0, 20"
                             HorizontalAlignment="Stretch" 
                             VerticalAlignment="Stretch" >
-            <!-- Основная часть раздела 4 -->
-            <!-- Заголовок раздела 4 -->
-            <TextBlock x:Uid="buyMeTitle" 
-                               FontSize="26" Margin="0, 0, 0, 5" 
+
+            <Grid>
+                <TextBlock x:Uid="buyMeTitle" 
+                               FontSize="26" Margin="0" 
                                FontFamily="Minion Pro"/>
+                <ToggleSwitch x:Name="allBuy" 
+                              Toggled="allBuy_Toggled"  />
+            </Grid>
             <TextBlock x:Uid="buyMeText" 
                                FontSize="22" Margin="2,5,2,10" 
                                LineHeight="26"
                                FontFamily="Minion Pro"/>
-            <Button x:Uid="shopBtn" x:Name="buy"  
-                    Click="Button_Click" FontSize="22"
-                    BorderThickness="0"
-                    Background="#ff303030"
-                    Foreground="#ffffffff"
-                    HorizontalAlignment="Center"
-                    Margin="5,10" 
-                    Height="50" Width="140"
-                    HorizontalContentAlignment="Center"
-                    VerticalAlignment="Bottom"/>
         </StackPanel>
-
-        <!-- Раздел содержимого 2-->
         <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
-                        Margin="0, 20"
-                        HorizontalAlignment="Stretch" 
-                        VerticalAlignment="Stretch"
-                        Orientation="Horizontal">
-            <!-- Заголовок раздела 2 -->
-            <!--toggle-->
-            <!-- Заголовок раздела 2 -->
-            <TextBlock x:Uid="tileHeader"
+                            Margin="0, 20"
+                            HorizontalAlignment="Stretch" 
+                            VerticalAlignment="Stretch" >
+            <Grid>
+                <TextBlock x:Uid="buyBgTitle" 
+                               FontSize="26" Margin="0" 
+                               FontFamily="Minion Pro"/>
+                <ToggleSwitch x:Name="bgBuy" 
+                              Toggled="bgBuy_Toggled" />                
+            </Grid>
+            
+            <TextBlock x:Uid="buyBgText" 
+                               FontSize="22" Margin="2,5,2,10" 
+                               LineHeight="26"
+                               FontFamily="Minion Pro"/>
+        </StackPanel>
+                    
+            <!--toggle-->            
+            <Grid HorizontalAlignment="Stretch">
+                <TextBlock x:Uid="tileHeader"
                            FontSize="26" 
                            FontFamily="Minion Pro" 
-                           Height="30" Width="350"
+                           Height="30" 
                            HorizontalAlignment="Left"
-                           Style="{StaticResource TitleTextBlockStyle}" 
-                           />
-            <!--toggle-->
+                           Style="{StaticResource TitleTextBlockStyle}" />
             <ToggleSwitch x:Name="tileToggle" 
-                              Toggled="tileToggle_Toggled" 
-                              HorizontalAlignment="Left" 
-                              Margin="10, 0, 10, 0"
-                              FontFamily="Minion Pro" FontSize="16"  />
-
+                          Margin="10, -10, 10, 0"
+                          Toggled="tileToggle_Toggled"  />
+            </Grid>
+        
+        <StackPanel Name="smartTileStack"
+                    Style="{StaticResource SettingsFlyoutSectionStyle}" 
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                    Margin="0,20"
+                    Orientation="Vertical">
+            <!-- Заголовок раздела 3 -->
+            <TextBlock x:Uid="smartTileHeaderText" 
+                           Style="{StaticResource TitleTextBlockStyle}" 
+                           FontSize="26" 
+                           FontFamily="Minion Pro" 
+                           Margin="0, 0, 0, 10" 
+                           Height="auto" Width="300"
+                           HorizontalAlignment="Left"
+                           />
+            <!-- Основная часть раздела 3 -->
+            <TextBlock x:Uid="smartTileText" 
+                           Margin="0,10,0,30" 
+                           TextWrapping="Wrap" 
+                           LineHeight="25"
+                           FontSize="22" 
+                           HorizontalAlignment="Left"
+                           MaxWidth="500"
+                           FontFamily="Minion Pro"/>
+            <!--toggle-->
+            <TextBlock x:Uid="daysAmountText" 
+                           TextWrapping="Wrap" 
+                           FontSize="22" 
+                           VerticalAlignment="Top" 
+                           Height="30" Width="150" 
+                           Margin="0"
+                           FontFamily="Minion Pro"
+                           HorizontalAlignment="Left"/>
+            <Grid>
+                <ComboBox x:Name="comboAmount" 
+                                  Height="30" Width="150" 
+                                  Margin="0" 
+                                  IsHoldingEnabled="False" 
+                                  ManipulationMode="None" 
+                                  VerticalAlignment="Stretch" 
+                                  HorizontalAlignment="Left">
+                    <ComboBoxItem Content="3" Width="110" IsSelected="True" />
+                    <ComboBoxItem Content="7" Width="110"/>
+                    <ComboBoxItem Content="10" Width="110"/>
+                </ComboBox>
+                <ToggleSwitch x:Name="smartTileToggle"
+                          Toggled="smartTileToggle_Toggled" />
+            </Grid>
         </StackPanel>
+
 
         <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
                         HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
@@ -103,13 +167,13 @@
                            FontFamily="Minion Pro"
                            HorizontalAlignment="Left"/>
             <Grid>
-            <ComboBox x:Name="comboToast" 
-                                  Height="30" Width="150" 
-                                  Margin="10,0" 
-                                  IsHoldingEnabled="False" 
-                                  ManipulationMode="None" 
-                                  VerticalAlignment="Stretch" 
-                                  HorizontalAlignment="Left">
+            <ComboBox x:Name="comboToast"
+                      Height="30" Width="150"
+                      Margin="0"
+                      IsHoldingEnabled="False" 
+                      ManipulationMode="None"
+                      VerticalAlignment="Stretch"
+                      HorizontalAlignment="Left">
                 <ComboBoxItem x:Uid="c1" Width="110" IsSelected="True" />
                 <ComboBoxItem x:Uid="c2" Width="110"/>
                 <ComboBoxItem x:Uid="c3" Width="110"/>
@@ -117,75 +181,20 @@
                 <ComboBoxItem x:Uid="c5" Width="110"/>
             </ComboBox>
             <ComboBox x:Name="comboPeriod" 
-                                  Height="30" Width="150" 
-                                  Margin="170,0,10,0" 
-                                  IsHoldingEnabled="False" 
-                                  VerticalAlignment="Stretch" 
-                                  HorizontalAlignment="Left"
-                                  ManipulationMode="None">
+                      Height="30" Width="150" 
+                      Margin="170,0,10,0" 
+                      IsHoldingEnabled="False" 
+                      VerticalAlignment="Stretch" 
+                      HorizontalAlignment="Left"
+                      ManipulationMode="None">
                 <ComboBoxItem Content="4" Width="110" IsSelected="True" />
                 <ComboBoxItem Content="6" Width="110"/>
                 <ComboBoxItem Content="8" Width="110"/>
                 <ComboBoxItem Content="12" Width="110"/>
             </ComboBox>
             <ToggleSwitch x:Name="toastToggle"
-                          Toggled="toastToggle_Toggled" 
-                          HorizontalAlignment="Left" 
-                          Margin="360,0,10,0" 
-                          FontFamily="Minion Pro" FontSize="16"/>
-            </Grid>
-        </StackPanel>
-
-        <StackPanel Name="smartTileStack"
-                    Style="{StaticResource SettingsFlyoutSectionStyle}" 
-                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                    Margin="0,20"
-                    Orientation="Vertical">
-            <!-- Заголовок раздела 3 -->
-            <TextBlock x:Uid="smartTileHeaderText" 
-                           Style="{StaticResource TitleTextBlockStyle}" 
-                           FontSize="26" 
-                           FontFamily="Minion Pro" 
-                           Margin="0, 0, 0, 10" 
-                           Height="auto" Width="300"
-                           HorizontalAlignment="Left"
-                           />
-            <!-- Основная часть раздела 3 -->
-            <TextBlock x:Uid="smartTileText" 
-                           Margin="0,10,0,30" 
-                           TextWrapping="Wrap" 
-                           LineHeight="25"
-                           FontSize="22" 
-                           HorizontalAlignment="Left"
-                           MaxWidth="500"
-                           FontFamily="Minion Pro"/>
-            <!--toggle-->
-            <TextBlock x:Uid="daysAmountText" 
-                           TextWrapping="Wrap" 
-                           FontSize="22" 
-                           VerticalAlignment="Top" 
-                           Height="30" Width="150" 
-                           Margin="170,0,0,0"
-                           FontFamily="Minion Pro"
-                           HorizontalAlignment="Left"/>
-            <Grid>
-                <ComboBox x:Name="comboAmount" 
-                                  Height="30" Width="150" 
-                                  Margin="10,0" 
-                                  IsHoldingEnabled="False" 
-                                  ManipulationMode="None" 
-                                  VerticalAlignment="Stretch" 
-                                  HorizontalAlignment="Left">
-                    <ComboBoxItem Content="2" Width="110" IsSelected="True" />
-                    <ComboBoxItem Content="3" Width="110"/>
-                    <ComboBoxItem Content="4" Width="110"/>
-                    <ComboBoxItem Content="5" Width="110"/>
-                </ComboBox>
-                <ToggleSwitch x:Name="smartTileToggle"
-                          Toggled="smartTileToggle_Toggled" 
-                          HorizontalAlignment="Left" 
-                          Margin="360,0,10,0" 
-                          FontFamily="Minion Pro" FontSize="16"/>
+                          Margin="10, -10, 10, 0"
+                          Toggled="toastToggle_Toggled" />
             </Grid>
         </StackPanel>
 
@@ -221,7 +230,7 @@
             <Grid>
                 <ComboBox x:Name="comboGooglePeriod" 
                                   Height="30" Width="150" 
-                                  Margin="10,0" 
+                                  Margin="0" 
                                   IsHoldingEnabled="False" 
                                   ManipulationMode="None" 
                                   VerticalAlignment="Stretch" 
@@ -229,13 +238,11 @@
                 <ComboBoxItem Content="7" Width="110" IsSelected="True" />
                 <ComboBoxItem Content="30" Width="110"/>
             </ComboBox>
-            <ToggleSwitch x:Name="googleToggle"
-                          Toggled="googleToggle_Toggled" 
-                          HorizontalAlignment="Right" 
-                          FontFamily="Minion Pro" FontSize="16"/>
+                <ToggleSwitch x:Name="googleToggle"
+                          Margin="10, -10, 10, 0"
+                          Toggled="googleToggle_Toggled" />
             </Grid>
         </StackPanel>
-        
         
     </StackPanel>
 </SettingsFlyout>
