--- a/Calendar/Calendar.Shared/App.xaml
+++ b/Calendar/Calendar.Shared/App.xaml
@@ -26,7 +26,7 @@
                     <SolidColorBrush x:Key="ButtonPressedBackgroundThemeBrush" Color="Transparent" />
                     <SolidColorBrush x:Key="ButtonPressedForegroundThemeBrush" Color="Transparent" />
 
-                    <SolidColorBrush x:Key="ToggleSwitchCurtainBackgroundThemeBrush" Color="LightGray" />
+                    <SolidColorBrush x:Key="ToggleSwitchCurtainBackgroundThemeBrush" Color="White" />
                     <SolidColorBrush x:Key="ToggleSwitchCurtainPointerOverBackgroundThemeBrush" Color="DarkGray" />
                     <SolidColorBrush x:Key="ToggleSwitchCurtainPressedBackgroundThemeBrush" Color="#303030" />
                 </ResourceDictionary>
