--- a/Calendar/Calendar.WindowsPhone/SettingsPage.xaml
+++ b/Calendar/Calendar.WindowsPhone/SettingsPage.xaml
@@ -329,7 +329,7 @@
             <Setter Property="FontWeight" Value="SemiBold"/>
             <Setter Property="Height" Value="auto"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Margin" Value="0, 15, 0, 0"/>
+            <Setter Property="Margin" Value="0, 15, 0, 5"/>
         </Style>
         <Style TargetType="TextBlock" x:Key="DescriptionTextBlockStyleWP">
             <Setter Property="FontSize" Value="20"/>
@@ -337,21 +337,33 @@
             <Setter Property="FontWeight" Value="Normal"/>
             <Setter Property="Height" Value="auto"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Margin" Value="0, 5, 10, 5"/>
         </Style>
         <Style TargetType="Grid" x:Key="GridItemPanelStyle">
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="Margin" Value="0, 5, 0, 0"/>
         </Style>
         <Style TargetType="StackPanel" x:Key="StackItemPanelStyle">
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="Margin" Value="0, 5, 0, 0"/>
             <Setter Property="Orientation" Value="Vertical"/>
         </Style>
         <Style TargetType="Border">
-            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="BorderBrush" Value="#FFF3F3F3"/>
+            <Setter Property="Padding" Value="0, 5"/>
+        </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="ManipulationMode" Value="None"/>
+            <Setter Property="IsHoldingEnabled" Value="False"/>
+            <Setter Property="MinHeight" Value="30"/>
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="RequestedTheme" Value="Light"/>
+            <Setter Property="Height" Value="Auto"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="BorderBrush" Value="#FF303030"/>
+            <Setter Property="Margin" Value="0, 5, 0, 0"/>
         </Style>
     </Page.Resources>
 
@@ -365,187 +377,118 @@
                        HorizontalAlignment="Center"
                        TextAlignment="Center"
                        FontSize="26"
-                       Margin="5"/>
+                       Margin="0, 5"/>
 
             <!--.................................-->
             <!--............all stuff............-->
             <!--.................................-->
-            <StackPanel Name="allStuffStack" Style="{StaticResource StackItemPanelStyle}">
-                <Grid Style="{StaticResource GridItemPanelStyle}">
-                    <TextBlock x:Uid="buyMeTitle" Style="{StaticResource HeaderTextBlockStyleWP}" />
-                    <ToggleSwitch x:Name="allBuy" Toggled="allBuy_Toggled" />
-                </Grid>
-                <TextBlock x:Uid="buyMeText" Style="{StaticResource DescriptionTextBlockStyleWP}"/>
-            </StackPanel>
-
+            <Border>
+                <StackPanel Name="allStuffStack" Style="{StaticResource StackItemPanelStyle}">
+                    <Grid Style="{StaticResource GridItemPanelStyle}">
+                        <TextBlock x:Uid="buyMeTitle" Style="{StaticResource HeaderTextBlockStyleWP}" />
+                        <ToggleSwitch Name="allBuy" Toggled="allBuy_Toggled" />
+                    </Grid>
+                    <TextBlock x:Uid="buyMeText" Style="{StaticResource DescriptionTextBlockStyleWP}"/>
+                </StackPanel>
+            </Border>
+            
             <!--.................................-->
             <!--............bg tasks.............-->
             <!--.................................-->
-            <StackPanel Style="{StaticResource StackItemPanelStyle}">
-                <Grid Style="{StaticResource GridItemPanelStyle}">
-                    <TextBlock x:Uid="buyBgTitle" Style="{StaticResource HeaderTextBlockStyleWP}" />
-                    <ToggleSwitch x:Name="bgBuy" Toggled="bgBuy_Toggled" />
+            <Border>
+                <StackPanel Style="{StaticResource StackItemPanelStyle}">
+                    <Grid Style="{StaticResource GridItemPanelStyle}">
+                        <TextBlock x:Uid="buyBgTitle" Style="{StaticResource HeaderTextBlockStyleWP}" />
+                        <ToggleSwitch Name="bgBuy" Toggled="bgBuy_Toggled" />
+                    </Grid>
+                    <TextBlock x:Uid="buyBgText" Style="{StaticResource DescriptionTextBlockStyleWP}"/>
+                </StackPanel>
+            </Border>
+
+            <!--.................................-->
+            <!--............tile grid............-->
+            <!--.................................-->
+            <Border>
+                <Grid Name="TileGrid" Style="{StaticResource GridItemPanelStyle}">
+                    <TextBlock x:Uid="tileHeader" Style="{StaticResource HeaderTextBlockStyleWP}" />
+                    <ToggleSwitch x:Name="tileToggle" Toggled="tileToggle_Toggled" />
                 </Grid>
-                <TextBlock x:Uid="buyBgText" Style="{StaticResource DescriptionTextBlockStyleWP}"/>
-            </StackPanel>
+            </Border>
 
-            <Grid Name="TileGrid" Style="{StaticResource GridItemPanelStyle}">
-                <TextBlock x:Uid="tileHeader" Style="{StaticResource HeaderTextBlockStyleWP}" />
-                <ToggleSwitch x:Name="tileToggle" Toggled="tileToggle_Toggled" />
-            </Grid>
-
-            <StackPanel Name="smartTileStack" Style="{StaticResource StackItemPanelStyle}">
-                <TextBlock x:Uid="smartTileHeaderText" Style="{StaticResource HeaderTextBlockStyleWP}" />
-                <TextBlock x:Uid="smartTileText" Style="{StaticResource DescriptionTextBlockStyleWP}"/>
-                <!--toggle-->
-                <TextBlock x:Uid="daysAmountText" 
-                               Style="{StaticResource DescriptionTextBlockStyleWP}"
-                               VerticalAlignment="Top" 
-                               Height="30" Width="150" 
-                               Margin="10,0"
-                               HorizontalAlignment="Left"/>
-                <Grid>
-                    <ComboBox x:Name="comboAmount" 
-                                MinHeight="30" Width="150" 
-                                Margin="10,5" 
-                                RequestedTheme="Light"
-                                IsHoldingEnabled="False" 
-                                ManipulationMode="None" 
-                                VerticalAlignment="Stretch" 
+            <!--.................................-->
+            <!--............smart tile...........-->
+            <!--.................................-->
+            <Border>
+                <StackPanel Name="smartTileStack" Style="{StaticResource StackItemPanelStyle}">
+                    <TextBlock x:Uid="smartTileHeaderText" Style="{StaticResource HeaderTextBlockStyleWP}" />
+                    <TextBlock x:Uid="smartTileText" Style="{StaticResource DescriptionTextBlockStyleWP}"/>
+                    <Grid>
+                        <ComboBox x:Name="comboAmount" 
                                 HorizontalAlignment="Left">
-                        <ComboBoxItem Content="2" Width="auto" HorizontalAlignment="Stretch" IsSelected="True" />
-                        <ComboBoxItem Content="3" Width="auto" HorizontalAlignment="Stretch"/>
-                        <ComboBoxItem Content="4" Width="auto" HorizontalAlignment="Stretch"/>
-                        <ComboBoxItem Content="5" Width="auto" HorizontalAlignment="Stretch"/>
-                    </ComboBox>
-                    <ToggleSwitch x:Name="smartTileToggle"
+                            <ComboBox.Header>
+                                <TextBlock x:Uid="daysAmountText" 
+                                           Style="{StaticResource DescriptionTextBlockStyleWP}"
+                                           Foreground="#ff303030"
+                                           HorizontalAlignment="Left"/> 
+                            </ComboBox.Header>
+                            <ComboBoxItem Content="2" Width="auto" HorizontalAlignment="Stretch" IsSelected="True" />
+                            <ComboBoxItem Content="3" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem Content="4" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem Content="5" Width="auto" HorizontalAlignment="Stretch"/>
+                        </ComboBox>
+                        <ToggleSwitch x:Name="smartTileToggle"
+                                      VerticalAlignment="Bottom"
                                       Toggled="smartTileToggle_Toggled"/>
-                </Grid>
-            </StackPanel>
+                    </Grid>
+                </StackPanel>
+            </Border>
 
-            <Grid Name="ToastGrid" Style="{StaticResource GridItemPanelStyle}">
-                <TextBlock x:Uid="toastHeader" Style="{StaticResource HeaderTextBlockStyleWP}" />
-                <ToggleSwitch x:Name="toastToggle" Toggled="toastToggle_Toggled" />
-            </Grid>
-            <Grid Style="{StaticResource GridItemPanelStyle}">
-                <ComboBox x:Name="comboToast" 
-                              Height="auto" Width="150"
-                              Margin="5, 0"
-                              RequestedTheme="Light"                         
-                              IsHoldingEnabled="False" 
-                              ManipulationMode="None" 
-                              VerticalAlignment="Stretch" 
-                              HorizontalAlignment="Left" 
-                              BorderBrush="#ff303030"
-                              Background="Transparent" FontSize="18">
-
-                    <ComboBox.Header>
-                        <TextBlock x:Uid="daysText" 
+            <!--.................................-->
+            <!--............toast panel..........-->
+            <!--.................................-->
+            <Border>
+                <StackPanel>
+                    <Grid Name="ToastGrid" Style="{StaticResource GridItemPanelStyle}">
+                        <TextBlock x:Uid="toastHeader" Style="{StaticResource HeaderTextBlockStyleWP}" />
+                        <ToggleSwitch x:Name="toastToggle" Toggled="toastToggle_Toggled" />
+                    </Grid>
+                    <Grid Style="{StaticResource GridItemPanelStyle}">
+                        <ComboBox x:Name="comboToast"         
+                              HorizontalAlignment="Left">
+                            <ComboBox.Header>
+                                <TextBlock x:Uid="daysText" 
                                    TextWrapping="Wrap" 
                                    FontSize="20" 
                                    Foreground="#ff303030"
                                    VerticalAlignment="Bottom"
-                                   Height="40" MinWidth="120" 
-                                   Margin="2, 0" Padding="0" 
                                    HorizontalAlignment="Left"/>
-                    </ComboBox.Header>
+                            </ComboBox.Header>
 
-                    <ComboBoxItem x:Uid="c1" Width="auto" HorizontalAlignment="Stretch" IsSelected="True" />
-                    <ComboBoxItem x:Uid="c2" Width="auto" HorizontalAlignment="Stretch"/>
-                    <ComboBoxItem x:Uid="c3" Width="auto" HorizontalAlignment="Stretch"/>
-                    <ComboBoxItem x:Uid="c4" Width="auto" HorizontalAlignment="Stretch"/>
-                    <ComboBoxItem x:Uid="c5" Width="auto" HorizontalAlignment="Stretch"/>
-                </ComboBox>
-                <ComboBox x:Name="comboPeriod" 
-                          RequestedTheme="Light"
-                          Height="auto" Width="150"
-                          FontSize="20"
-                          Margin="5, 0"
-                          IsHoldingEnabled="False" 
-                          HorizontalAlignment="Right" 
-                          VerticalAlignment="Top" 
-                          ManipulationMode="None"
-                          BorderBrush="#ff303030"
-                          Background="Transparent">
-                    <ComboBox.Header>
-                        <TextBlock x:Uid="periodText" 
+                            <ComboBoxItem x:Uid="c1" Width="auto" HorizontalAlignment="Stretch" IsSelected="True" />
+                            <ComboBoxItem x:Uid="c2" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem x:Uid="c3" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem x:Uid="c4" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem x:Uid="c5" Width="auto" HorizontalAlignment="Stretch"/>
+                        </ComboBox>
+                        <ComboBox x:Name="comboPeriod" 
+                          HorizontalAlignment="Right">
+                            <ComboBox.Header>
+                                <TextBlock x:Uid="periodText" 
                                    TextWrapping="Wrap" 
                                    FontSize="20" 
                                    Foreground="#ff303030"
-                                   VerticalAlignment="Bottom"                           
-                                   Height="40" MinWidth="120" 
-                                   Margin="0" Padding="0" 
+                                   VerticalAlignment="Bottom"   
                                    HorizontalAlignment="Left"/>
-                    </ComboBox.Header>
-                    <ComboBoxItem Content="4" Width="auto" HorizontalAlignment="Stretch" IsSelected="True" />
-                    <ComboBoxItem Content="6" Width="auto" HorizontalAlignment="Stretch"/>
-                    <ComboBoxItem Content="8" Width="auto" HorizontalAlignment="Stretch"/>
-                    <ComboBoxItem Content="12" Width="auto" HorizontalAlignment="Stretch"/>
-                </ComboBox>
-            </Grid>
-            <!--<StackPanel  Name="GoogleStackPanel"
-                             HorizontalAlignment="Stretch" 
-                             VerticalAlignment="Stretch"
-                             Margin="5, 10, 5, 0"
-                             Orientation="Vertical">
-                    -->
-            <!-- Заголовок раздела 3 -->
-            <!--
-                    <TextBlock Text="google calendar"
-                           FontSize="22"
-                           TextWrapping="Wrap"
-                           Height="auto"
-                           HorizontalAlignment="Stretch"
-                           FontFamily="Minion Pro" 
-                           Margin="0, 0, 0, 10" 
-                           />
-                    -->
-            <!-- Основная часть раздела 3 -->
-            <!--
-                    <TextBlock x:Uid="googleText" 
-                               
-                           TextWrapping="WrapWholeWords" 
-                           FontSize="20"
-                           Margin="2,10" />
-                    -->
-            <!--toggle-->
-            <!--
-                    <Grid>
-                        <ComboBox x:Name="comboGooglePeriod" Height="auto" Width="150"
-                          Margin="5, 0"                          
-                          IsHoldingEnabled="False" 
-                          ManipulationMode="None" 
-                          VerticalAlignment="Stretch" 
-                          HorizontalAlignment="Left" 
-                          BorderBrush="#ff303030"
-                          Background="Transparent" FontSize="18">
-                            <ComboBox.Header>
-                                <TextBlock x:Uid="googlePeriod" 
-                                           TextWrapping="WrapWholeWords" 
-                                           FontSize="20" 
-                                           Foreground="#ff303030"
-                                           VerticalAlignment="Top" 
-                                           Height="30" Width="150" 
-                                           Margin="0,5"
-                                           FontFamily="Minion Pro"
-                                           HorizontalAlignment="Left"/>
                             </ComboBox.Header>
-                            <ComboBoxItem Content="7" Width="110" IsSelected="True" />
-                            <ComboBoxItem Content="30" Width="110"/>
+                            <ComboBoxItem Content="4" Width="auto" HorizontalAlignment="Stretch" IsSelected="True" />
+                            <ComboBoxItem Content="6" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem Content="8" Width="auto" HorizontalAlignment="Stretch"/>
+                            <ComboBoxItem Content="12" Width="auto" HorizontalAlignment="Stretch"/>
                         </ComboBox>
-                        <ToggleSwitch x:Name="googleToggle"
-                                  Style="{StaticResource SettingsToggle}" 
-                                  FontSize="12" 
-                              Height="auto"
-                              MinWidth="180"
-                              Margin="5,0,5,5"
-                              BorderBrush="#ff303030"
-                              Background="Transparent" 
-                              VerticalAlignment="Center"
-                              HorizontalAlignment="Right"
-                          Toggled="googleToggle_Toggled"/>
                     </Grid>
-                </StackPanel>-->
+                </StackPanel>
+            </Border>
+   
         </StackPanel>
     </ScrollViewer>
 </Page>
